--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="container">
             <div class="row d-flex flex-column-reverse flex-lg-row">
                 <div class="col-lg-6" data-aos="fade-left">
-                    <div class="about-image">
+                    <div class="about-image pt-lg-0 pt-5">
                         <img src="./images/hero.webp" alt="College Campus" class="img-fluid rounded">
                     </div>
                 </div>
