--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav m-auto">
                     <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#academics">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#courses">Classes</a></li>
