--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark" id="mainNav">
         <div class="container-fluid d-flex justify-content-between align-items-center">
-            <a class="navbar-brand d-flex align-items-center" href="#home">
+            <a class="navbar-brand d-flex align-items-center" href="./index.html">
                 <img src="./images/logo.png" class="img-fluid" alt="">
             </a>
 
@@ -51,7 +51,7 @@
             </div>
 
             <div class="d-none d-lg-block">
-                <a class="btn btn-primary text-white px-3" href="#contact">Admission</a>
+                <a class="btn btn-primary text-white px-3" href="./addmission.html">Admission</a>
             </div>
         </div>
     </nav>
@@ -72,7 +72,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./images/slider1.jpg" class="d-block w-100" alt="Slide 1">
+                <img src="./images/slider1).jpg" class="d-block w-100" alt="Slide 1">
             </div>
             <div class="carousel-item">
                 <img src="./images/slider2.jpg" class="d-block w-100" alt="Slide 2">
@@ -102,7 +102,7 @@
     </div>
 
     <!-- About Section with Subscribe -->
-    <section id="about" class="py-5">
+    <section id="about" class="py-5 overflow-hidden">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 p-2 p-lg-5" data-aos="fade-right">
