--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
 
                 <div class="col-lg-6" data-aos="fade-left">
-                    <div class="about-image d-flex flex-wrap gap-lg-0 gap-2">
+                    <div class="about-image d-flex flex-wrap">
                         <img src="./images/hero5.jpg" alt="College Campus" class="img-fluid rounded me-2">
                         <img src="./images/hero3.jpg" alt="College Campus" class="img-fluid rounded">
                     </div>
