--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                     <li class="nav-item"><a class="nav-link" href="#gallery">Video</a></li>
                     <li class="nav-item"><a class="nav-link" href="#gallery">Review</a></li>
                     <li class="nav-item"><a class="nav-link" href="#gallery">Contact</a></li>
+                    <div class="d-block d-lg-none">
+                        <a class="btn btn-primary text-white px-3" href="./addmission.html">Admission</a>
+                    </div>
                     <!-- <li class="nav-item">
               <a class="nav-link btn btn-primary text-white ms-2 px-3" href="#contact">Addmission</a>
           </li> -->
