--- a/addmission.html
+++ b/addmission.html
@@ -25,7 +25,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark" id="mainNav">
+   <nav class="navbar navbar-expand-lg navbar-dark" id="mainNav">
         <div class="container-fluid d-flex justify-content-between align-items-center">
             <a class="navbar-brand d-flex align-items-center" href="./index.html">
                 <img src="./images/logo.png" class="img-fluid" alt="">
@@ -43,6 +43,9 @@
                     <li class="nav-item"><a class="nav-link" href="#gallery">Video</a></li>
                     <li class="nav-item"><a class="nav-link" href="#gallery">Review</a></li>
                     <li class="nav-item"><a class="nav-link" href="#gallery">Contact</a></li>
+                    <div class="d-block d-lg-none">
+                        <a class="btn btn-primary text-white px-3" href="./addmission.html">Admission</a>
+                    </div>
                     <!-- <li class="nav-item">
               <a class="nav-link btn btn-primary text-white ms-2 px-3" href="#contact">Addmission</a>
           </li> -->
