--- a/addmission.html
+++ b/addmission.html
@@ -59,7 +59,7 @@
     </nav>
 
     <div class="addmission p-0 p-lg-5">
-        <div class="container addmission-form">
+        <div class="container-fluid addmission-form">
             <h2>Admission</h2>
             <form>
                 <div class="mb-3">
