--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <section id="about" class="py-5 overflow-hidden">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 p-2 p-lg-5" data-aos="fade-right">
+                <div class="col-lg-6 pe-2 py-2 pe-lg-5 py-lg-5" data-aos="fade-right">
                     <h2 class="section-title">Unlock Your Physics Potential</h2>
                     <p class="fs-5">Enhance your understanding of Physics with our tailored NEET</p>
 
