--- a/index.html
+++ b/index.html
@@ -60,48 +60,36 @@
     </nav>
 
     <!-- Carousel -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                aria-label="Slide 5"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="./images/slider1).jpg" class="d-block w-100" alt="Slide 1">
-            </div>
-            <div class="carousel-item">
-                <img src="./images/slider2.jpg" class="d-block w-100" alt="Slide 2">
-            </div>
-            <div class="carousel-item">
-                <img src="./images/slider3.jpg" class="d-block w-100" alt="Slide 3">
+    <div class="container-fluid pt-0 pt-lg-4 carousel">
+        <div class="carousel-wrapper">
+            <div class="carousel-track" id="carouselTrack">
+                <!-- Original Slides -->
+                <div class="carousel-item-custom"><img src="./images/slider1.jpg" alt="1"></div>
+                <div class="carousel-item-custom"><img src="./images/slider2.jpg" alt="2"></div>
+                <div class="carousel-item-custom"><img src="./images/slider3.jpg" alt="3"></div>
+                <div class="carousel-item-custom"><img src="./images/slider6.jpg" alt="4"></div>
+                <div class="carousel-item-custom"><img src="./images/hero4.png" alt="5"></div>
+
+                <!-- Clones for Loop -->
+                <div class="carousel-item-custom"><img src="./images/slider1.jpg" alt="1-clone"></div>
+                <div class="carousel-item-custom"><img src="./images/slider2.jpg" alt="2-clone"></div>
             </div>
 
-            <div class="carousel-item">
-                <img src="./images/slider6.jpg" class="d-block w-100" alt="Slide 4">
+            <button class="carousel-btn prev" onclick="moveSlide(-1)">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-btn next" onclick="moveSlide(1)">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+
+            <div class="carousel-indicators justify-content-center mt-3" id="customIndicators">
+                <button type="button" onclick="goToSlide(0)" class="active" aria-label="Slide 1"></button>
+                <button type="button" onclick="goToSlide(1)" aria-label="Slide 2"></button>
+                <button type="button" onclick="goToSlide(2)" aria-label="Slide 3"></button>
+                <button type="button" onclick="goToSlide(3)" aria-label="Slide 4"></button>
             </div>
 
-            <div class="carousel-item">
-                <img src="./images/hero4.png" class="d-block w-100" alt="Slide 5">
-            </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </div>
 
     <!-- About Section with Subscribe -->
