--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 
     <!-- Carousel -->
-    <div class="container-fluid pt-0 pt-lg-4 carousel">
+    <div class="container-fluid carousel">
         <div class="carousel-wrapper">
             <div class="carousel-track" id="carouselTrack">
                 <!-- Original Slides -->
